# nicolasmorabotv0

./: README.md  agent.py  pyproject.toml
logs/: stage1_reward_comparison.csv  stage2_gridsearch.csv  stage3_walkforward_summary.csv  stage4_oot_ablation.csv
notebooks/: eda.ipynb
notebooks/.ipynb_checkpoints/: analisis_reward_comparison-checkpoint.ipynb
