[project]
name = "bellman-capital"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "gymnasium>=0.29",
    "torch>=2.2",
    "numpy>=1.26",
    "pandas>=2.2",
    "matplotlib>=3.8",
    "pyyaml>=6.0",
    "scikit-learn>=1.4",
    "requests>=2.31",
    "tqdm>=4.66",
    "pyarrow>=15.0",
]
 
[dependency-groups]
dev = [
    "pytest>=8.0",
    "jupyter>=1.0",
    "ipykernel>=6.0",
]
 
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
 
[tool.hatch.build.targets.wheel]
packages = ["src"]
 
[tool.pytest.ini_options]
pythonpath = ["."]
 
# =============================================================================
# Portable PyTorch wheel selection (handled by uv).
#
# Goal: install the CUDA build on machines that can have an NVIDIA GPU
# (Linux / Windows) so the RTX 3070 is used, but fall back to the CPU build on
# macOS (and anywhere CUDA is unavailable) so the project still installs and the
# grader can run it without a GPU.
#
# cu121 = CUDA 12.1 runtime, compatible with the RTX 3070 and recent drivers.
# If a machine has an older driver, switch the index url to .../whl/cu118.
# =============================================================================
 
[tool.uv.sources]
torch = [
    { index = "pytorch-cu121", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
    { index = "pytorch-cpu",   marker = "sys_platform == 'darwin'" },
]
 
[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true
 
[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true